# md-bakery

./: Cargo.toml  LICENSE  README.md  bake.sh
examples/: README.md  snippets.rs
src/: main.rs
